Replace R8 with Dex, update services to better support Android content